project3/MathExamples.txt
Python 2.7.10 (default, Jun  1 2015, 18:05:38)
[GCC 4.9.2] on cygwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import numpy as np
>>> xs = np.array(4)
>>> xs
array(4)
>>> print [x for x in xs]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: iteration over a 0-d array
>>> xs = range(4)
>>> xs
[0, 1, 2, 3]
>>> ys = range(4)
>>> np.meshgrid(xs,ys)
[array([[0, 1, 2, 3],
       [0, 1, 2, 3],
       [0, 1, 2, 3],
       [0, 1, 2, 3]]), array([[0, 0, 0, 0],
       [1, 1, 1, 1],
       [2, 2, 2, 2],
       [3, 3, 3, 3]])]
>>> newXs, newYs = np.meshgrid(xs,ys)
>>> newXs
array([[0, 1, 2, 3],
       [0, 1, 2, 3],
       [0, 1, 2, 3],
       [0, 1, 2, 3]])
>>> positions = np.vstack([X.ravel(),Y.ravel()])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'X' is not defined
>>> positions = np.vstack([xs.ravel(),ys.ravel()])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'ravel'
>>> positions = np.vstack([newXs.ravel(),newYs.ravel()])
>>> positions
array([[0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3],
       [0, 0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3]])
>>> positions[0]
array([0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3])
>>> positions = np.vstack([newXs,newYs])
>>> positions
array([[0, 1, 2, 3],
       [0, 1, 2, 3],
       [0, 1, 2, 3],
       [0, 1, 2, 3],
       [0, 0, 0, 0],
       [1, 1, 1, 1],
       [2, 2, 2, 2],
       [3, 3, 3, 3]])
>>> zip(newXs.flatten(),newYs.flatten())
[(0, 0), (1, 0), (2, 0), (3, 0), (0, 1), (1, 1), (2, 1), (3, 1), (0, 2), (1, 2), (2, 2), (3, 2), (0, 3), (1, 3), (2, 3), (3, 3)]
>>> as = np.asarray([1,2,3])
  File "<stdin>", line 1
    as = np.asarray([1,2,3])
     ^
SyntaxError: invalid syntax
>>> as = [1,2,3]
  File "<stdin>", line 1
    as = [1,2,3]
     ^
SyntaxError: invalid syntax
>>> a = [1,2,3]
>>> a = np.asarray(a)
>>> b = np.asarray(b)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'b' is not defined
>>> b = np.asarray([3,4,5])
>>> np.c_(a,b)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'CClass' object is not callable
>>> np.c_[a,b]
array([[1, 3],
       [2, 4],
       [3, 5]])

>>> p = [[1,1],[2,2],[3,3]]
>>> q = [0.1,0.5,1]
>>> p*q
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can't multiply sequence by non-int of type 'list'
>>> q = np.asarray([0.1,0.5,1])
>>> p = np.asarray([[1,1],[2,2],[3,3]])
>>> p*q
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: operands could not be broadcast together with shapes (3,2) (3,)
>>> p*q[:,numpy.nexaxis]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'numpy' is not defined
>>> p*q[:,np.nexaxis]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'module' object has no attribute 'nexaxis'
>>> p*q[:,None]
array([[ 0.1,  0.1],
       [ 1. ,  1. ],
       [ 3. ,  3. ]])
>>> exit()
